Fix plusholder item alignment

--- a/low-code-editor/src/Diagram/components/Portals/Overlay/Elements/PlusHolder/style.scss
+++ b/low-code-editor/src/Diagram/components/Portals/Overlay/Elements/PlusHolder/style.scss
@@ -228,7 +228,7 @@
 
                 .text-label {
                     width: 100px;
-                    margin-top: 5px;
+                    margin-top: 0;
                 }
             }
         }
